# zecale

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE__OF__CONDUCT_8md.html  CODING_STANDARDS.md  CODING__STANDARDS_8md.html  CONTRIBUTING_8md.html  Dockerfile-zecale  Doxyfile.in  README.md  README_8md.html  README__doxygen_8md.html  README_doxygen.md  aggregated__transaction_8py.html  aggregated__transaction_8py_source.html  aggregator__circuit_8hpp.html  aggregator__circuit_8hpp__dep__incl.map  aggregator__circuit_8hpp__dep__incl.md5  aggregator__circuit_8hpp__incl.map  aggregator__circuit_8hpp__incl.md5  aggregator__circuit_8hpp_source.html  aggregator__circuit_8tcc.html  aggregator__circuit_8tcc__dep__incl.map  aggregator__circuit_8tcc__dep__incl.md5  aggregator__circuit_8tcc_source.html  aggregator__client_8py.html  aggregator__client_8py_source.html  aggregator__config_8py.html  aggregator__config_8py_source.html  aggregator__gadget_8hpp.html  aggregator__gadget_8hpp__dep__incl.map  aggregator__gadget_8hpp__dep__incl.md5  aggregator__gadget_8hpp__incl.map  aggregator__gadget_8hpp__incl.md5  aggregator__gadget_8hpp_source.html  aggregator__gadget_8tcc.html  aggregator__gadget_8tcc__dep__incl.map  aggregator__gadget_8tcc__dep__incl.md5  (+378 more)
aggregator_server/: CMakeLists.txt  aggregator_server.cpp
api/: aggregator.proto  groth16_messages.proto  pghr13_messages.proto  util.proto
client/: .pylintrc  Makefile  README.md  mypy.ini  setup.py
cmake/: code_coverage.cmake  gcc_dev_tools.cmake
contracts/: DummyApplication.sol  Groth16BW6_761.sol  Groth16BW6_761_test.sol  IZecaleApplication.sol  ZecaleDispatcher.sol  bw6_761_groth16.sol  bw6_761_groth16_test.sol  dummy_application.sol  zecale_application.sol  zecale_client_application.sol  zecale_dispatcher.sol
debug/: README.md
depends/: CMakeLists.txt
depends/libsnark/: .gitmodules  CMakeLists.txt
depends/libsnark/depends/libff/libff/algebra/curves/alt_bn128/: alt_bn128_g1.cpp  alt_bn128_g1.hpp  alt_bn128_g2.cpp  alt_bn128_g2.hpp
depends/libsnark/depends/libff/libff/algebra/curves/edwards/: edwards_g2.cpp
depends/libsnark/depends/libff/libff/algebra/fields/: bigint.tcc  fp.tcc  fp2.tcc
depends/libsnark/depends/libff/libff/algebra/scalar_multiplication/: multiexp.tcc
depends/libsnark/libsnark/common/data_structures/: merkle_tree.tcc
depends/libsnark/libsnark/common/routing_algorithms/: as_waksman_routing_algorithm.cpp
depends/libsnark/libsnark/gadgetlib1/: protoboard.tcc
depends/libsnark/libsnark/gadgetlib1/gadgets/cpu_checkers/tinyram/components/: alu_arithmetic.tcc
depends/libsnark/libsnark/gadgetlib1/gadgets/hashes/knapsack/: knapsack_gadget.tcc
depends/libsnark/libsnark/gadgetlib1/gadgets/hashes/sha256/: sha256_gadget.tcc
depends/libsnark/libsnark/gadgetlib1/gadgets/merkle_tree/: merkle_tree_check_read_gadget.tcc  merkle_tree_check_update_gadget.tcc
depends/libsnark/libsnark/gadgetlib1/gadgets/verifiers/: r1cs_ppzksnark_verifier_gadget.tcc
depends/libsnark/libsnark/gadgetlib1/gadgets/verifiers/tests/: test_r1cs_ppzksnark_verifier_gadget.cpp
depends/libsnark/libsnark/knowledge_commitment/: kc_multiexp.tcc
depends/libsnark/libsnark/reductions/r1cs_to_qap/: r1cs_to_qap.hpp  r1cs_to_qap.tcc
depends/libsnark/libsnark/relations/constraint_satisfaction_problems/r1cs/: r1cs.tcc
depends/libsnark/libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/: r1cs_gg_ppzksnark.hpp  r1cs_gg_ppzksnark.tcc
libzecale/: CMakeLists.txt  zecale_constants.hpp
libzecale/circuits/: aggregator.tcc  aggregator_circuit.hpp  aggregator_circuit.tcc  aggregator_circuit_wrapper.hpp  aggregator_circuit_wrapper.tcc  aggregator_gadget.hpp  aggregator_gadget.tcc  compression_function_selector.hpp  null_hash_gadget.hpp  null_hash_gadget.tcc  verification_key_hash_gadget.hpp  verification_key_hash_gadget.tcc  verifier_gagdet_imports.hpp
libzecale/circuits/fields/: fp12_2over3over2_gadgets.hpp  fp12_2over3over2_gadgets.tcc  fp6_3over2_gadgets.hpp  fp6_3over2_gadgets.tcc
libzecale/circuits/groth16_verifier/: groth16_verifier_parameters.hpp  r1cs_gg_ppzksnark_verifier_gadget.hpp  r1cs_gg_ppzksnark_verifier_gadget.tcc  r1cs_gg_ppzksnark_verifier_gagdet.hpp
libzecale/circuits/pairing/: bls12_377_membership_check_gadgets.hpp  bls12_377_membership_check_gadgets.tcc  bls12_377_pairing.hpp  bls12_377_pairing.tcc  bw6_761_pairing_params.hpp  group_variable_gadgets.hpp  group_variable_gadgets.tcc  mnt_pairing_params.hpp  mnt_weierstrass_quadruple_miller_loop.hpp  mnt_weierstrass_quadruple_miller_loop.tcc  pairing_checks.hpp  pairing_checks.tcc  pairing_params.hpp  point_multiplication_gadgets.hpp  point_multiplication_gadgets.tcc  weierstrass_miller_loop.hpp  weierstrass_miller_loop.tcc
libzecale/circuits/pghr13_verifier/: pghr13_verifier_parameters.hpp  r1cs_ppzksnark_verification_key_scalar_variable.hpp  r1cs_ppzksnark_verification_key_scalar_variable.tcc
libzecale/core/: aggregator_circuit_wrapper.hpp  aggregator_circuit_wrapper.tcc  application_pool.hpp  application_pool.tcc  nested_transaction.hpp  nested_transaction.tcc  transaction_to_aggregate.hpp  transaction_to_aggregate.tcc
libzecale/serialization/: proto_utils.hpp  proto_utils.tcc
libzecale/tests/: CMakeLists.txt  README.md  aggregator_test.cpp  pairing_circuits_test.cpp  util_api_test.cpp
libzecale/tests/aggregator/: aggregator_dummy_test.cpp  aggregator_test.cpp
libzecale/tests/circuits/: bls12_377_membership_check_test.cpp  bls12_377_pairing_test.cpp  dummy_application.hpp  dummy_application.tcc  dummy_application_test.cpp  fp12_2over3over2_gadgets_test.cpp  fp6_3over2_gadgets_test.cpp  groth16_verifier_circuit_test.cpp  group_variable_gadgets_test.cpp  miller_loop_gadgets_test.cpp  pairing_checks_test.cpp  pairing_circuits_test.cpp  verification_key_hash_gadget_test.cpp
libzecale/tests/core/: application_pool_test.cpp
libzecale/tests/serialization/: proto_utils_test.cpp
scripts/: check-copyright  ci  ci_utils.sh  test-client  test-zeth-zecale  test_client  test_zeth_zecale
search/: all_0.js  all_1.js  all_10.js  all_11.js  (+93 more)
(+99 files in other folders)
